# FullStack-RAG-Backend

./: .env-sample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  specification.json
app/: config.py  main.py  models.py  query.py  upload.py
app/statics/: tools.py
app/tests/: test_main.py
backend/: config.py  main.py  prompts.py  query.py  tools.py  upload.py
notebooks/: cohere_api.ipynb  database.ipynb
