[project]
name = "backend"
version = "0.1.0"
description = "The backend of the RAG application"
authors = [
    {name = "Jonathan Maillefaud"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "cohere (>=5.13.11,<6.0.0)",
    "weaviate-client (>=4.10.4,<5.0.0)",
    "fastapi[all] (>=0.115.8,<0.116.0)",
    "pymupdf4llm (>=0.0.17,<0.0.18)",
    "langchain-core (>=0.3.33,<0.4.0)",
    "langchain-text-splitters (>=0.3.5,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
